# Emuchievements

./: .gitignore  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js
.github/workflows/: release.yml
backend/: CMakeLists.txt
backend/src/: main.cpp
src/py/: main.py
src/ts/: AchievementsManager.ts  LibraryInitializer.ts  RoutePatches.tsx  SteamTypes.d.ts  System.ts  index.tsx  settings.ts  steam-utils.ts
src/ts/components/: achievementPageComponent.tsx  emuchievementsComponent.tsx  gameListComponent.tsx  gamePageAchievementsSection.tsx  settingsComponent.tsx  styleWrapper.tsx
src/ts/hooks/: achievementsContext.tsx
